# sfml-flecs-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  TODO.md  build.sh
Core/: CMakeLists.txt
Core/Private/: GameInstance.cpp  GameService.cpp
Core/Private/GameStates/: GameState.cpp
Core/Private/Managers/: AudioManager.cpp  EventManager.cpp  FileManager.cpp  GameStateManager.cpp  ResourceManager.cpp  SceneManager.cpp
Core/Private/Modules/Camera/: CameraModule.cpp
Core/Private/Modules/Event/: EventModule.cpp
Core/Private/Modules/Input/: InputModule.cpp
Core/Private/Modules/Lifetime/: LifetimeModule.cpp
Core/Private/Modules/Particles/: ParticlesModule.cpp
Core/Private/Modules/Physics/: PhysicsModule.cpp
Core/Private/Modules/Render/: RenderModule.cpp
Core/Private/Modules/Render/Factories/: Circle.cpp  Rectangle.cpp  Sprite.cpp
Core/Private/Modules/UI/: UIModule.cpp
Core/Private/Modules/UI/Prefabs/: Button.cpp  Text.cpp
Core/Private/Scenes/: Scene.cpp
Core/Private/Utils/: Collision.cpp  Logger.cpp  Random.cpp  Vector.cpp
Core/Public/Core/: GameService.h
Core/Public/Core/GameStates/: GameState.h
Core/Public/Core/Managers/: AudioManager.h  EventManager.h  GameStateManager.h  ResourceManager.h  SceneManager.h
Core/Public/Core/Modules/Camera/Singletons/: MainCamera.h
Core/Public/Core/Modules/Event/Components/: EventBindings.h
Core/Public/Core/Modules/Input/: InputKey.h
Core/Public/Core/Modules/Input/Components/: Command.h  CommandQueue.h  Target.h
Core/Public/Core/Modules/Input/Singletons/: InputBindings.h
Core/Public/Core/Modules/Lifetime/: LifetimeModule.h
Core/Public/Core/Modules/Lifetime/Components/: LifetimeOneFrame.h
Core/Public/Core/Modules/Particles/Components/: Particle.h  ParticleEmitter.h
Core/Public/Core/Modules/Particles/Prefabs/: Particle.h
Core/Public/Core/Modules/Physics/Components/: Friction.h  Gravity.h
Core/Public/Core/Modules/Physics/Singletons/: GravitySettings.h
Core/Public/Core/Modules/Render/: RenderModule.h
Core/Public/Core/Modules/Render/Components/: CircleRenderable.h  ShaderUniforms.h  SpriteRenderable.h  TextRenderable.h  ZOrder.h
Core/Public/Core/Scenes/: Scene.h
Core/Public/Core/Utils/: Collision.h  Logger.h  Vector.h
Core/Public/SFE/: GameInstance.h  GameService.h  PhysicsConstants.h
Core/Public/SFE/Managers/: AudioManager.h  EventManager.h  FileManager.h  GameStateManager.h  ResourceManager.h  SceneManager.h
Core/Public/SFE/Modules/Camera/: CameraModule.h
Core/Public/SFE/Modules/Event/: EventModule.h
Core/Public/SFE/Modules/Input/: InputModule.h
Core/Public/SFE/Modules/Particles/: ParticlesModule.h
Core/Public/SFE/Modules/Physics/: PhysicsModule.h
Core/Public/SFE/Modules/UI/: UIModule.h
Core/Public/SFE/Themes/: Nord.h
Core/Public/SFE/Utils/: Collision.h  Random.h
(+56 files in other folders)
